<resources>
    <string name="app_name">Walk 3:60</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_history">History</string>
    <string name="title_healthy_snacks">Healthy Snacks</string>
    <string name="title_water_calc">Water Calculator</string>

    <string name="bicycle">On a bicycle</string>
    <string name="foot">On foot</string>
    <string name="running">Running</string>
    <string name="still">Still</string>
    <string name="tilting">Tilting</string>
    <string name="unknown_activity">Unknown Activity</string>
    <string name="vehicle">In a vehicle</string>
    <string name="walking">Walking</string>

    <string name="activity_enter">Started</string>
    <string name="activity_exit">Stopped</string>
    <string name="activity_error">Undetermined</string>

    <string name="inactive_time">Inactive Time</string>
    <string name="active_time">Active Time</string>

    <string name="inactivity_alert">Get Moving!</string>
    <string name="activity_goal_started">Keep Going!</string>
    <string name="activity_goal_finished">Good Job!</string>

    <string name="reminders_switch_walk360_key" translatable="false">reminders_switch_walk360_key</string>
    <string name="track_status_key" translatable="false">TRACK_STATUS_KEY</string>
    <string name="notifications">Walking Reminders</string>
    <string name="notifications_summary">Track Activity and Receive Notifications</string>

    <string name="days_walk360_key" translatable="false">days_walk360_key</string>
    <string name="choose_days">Choose Days To Get Walking Reminders On</string>
    <string name="days_title">Reminder Days</string>
    <string name="sun">Sunday</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thur">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>

    <string-array name="daysKeys" translatable="false">
        <item>@string/sun</item>
        <item>@string/mon</item>
        <item>@string/tue</item>
        <item>@string/wed</item>
        <item>@string/thur</item>
        <item>@string/fri</item>
        <item>@string/sat</item>
    </string-array>

    <string-array name="daysValues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string name="start_time_walk360_key" translatable="false">start_time_walk360_key</string>
    <string name="end_time_walk360_key" translatable="false">end_time_walk360_key</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="choose_start_time">Choose When To Start Walking Reminders each day</string>
    <string name="start_time_title">Reminder Start Time</string>
    <string name="choose_end_time">Choose When To Stop Walking Reminders each day</string>
    <string name="end_time_title">Reminder Stop Time</string>

    <string name="notif_channel_name" translatable="false">time-to-move</string>
    <string name="notif_channel_desc" translatable="false">time-to-move-reminders</string>

    <string name="user_signin">Toggle Account Status</string>
    <string name="user_signout_msg">You are logged out.</string>
    <string name="user_signin_error_msg">Login Failed. Please Try Again.</string>

    <string name="coming_soon">Coming Soon!</string>

    <string name="sitting_chart_label">Longest Continuous Period Sitting Each Day (Minutes)</string>
    <string name="walking_chart_label">Longest Continuous Period Walking Each Day (Minutes)</string>
    <string name="water_chart_label">Total Amount of Water Consumed Each Day (Ounces)</string>

    <string name="water_goal_desc">A simple goal for daily water intake
        can be calculated as 0.5 fluid ounces x your body weight in pounds.</string>
    <string name="water_goal_desc2">Note: This recommendation excludes extreme factors that may increase water intake needs, such as during exercise and hot/humid weather.</string>
    <string name="water_input_label">Enter your body weight below to calculate a recommended daily amount of water to drink: </string>
    <string name="water_input_hint">weight in pounds</string>
    <string name="water_calculate_btn_label">Calculate</string>
    <string name="water_result_btn_label">Recommendation:</string>
    <string name="water_calc_error">Error: No Body Weight was Entered.</string>

    <string name="water_add_btn_label">+ Water Intake</string>
    <string name="water_sub_btn_label">- Water Intake</string>

    <string name="user_track">Toggle Activity Tracking</string>

    <!-- the three letter abbreviation of the day is the key for weekday "row"/document in firestore db;
      later might want to change this so that it doesn't depend on USA spellings/Locale -->
    <string name="mon_string_key" translatable="false">Mon</string>
    <string name="tue_string_key" translatable="false">Tue</string>
    <string name="wed_string_key" translatable="false">Wed</string>
    <string name="thu_string_key" translatable="false">Thu</string>
    <string name="fri_string_key" translatable="false">Fri</string>
    <string name="sat_string_key" translatable="false">Sat</string>
    <string name="sun_string_key" translatable="false">Sun</string>
    <string name="not_available">N/A</string>

    <string name="add_widget">Add widget</string>

    <string name="time_to_walk">Time to Walk!</string>
    <string name="daily_totals_reset">Daily Totals Reset for a new day.</string>
    <string name="goal_max_display_str">GOAL MAX SITTING TIME OF 1 HOUR OR LESS</string>
    <string name="max_sit_display_str">Max Sitting Time:</string>
    <string name="max_walk_display_str">Max Walking Time:</string>

    <string name="todays_total">Today\'s Total</string>
    <string name="ounces">ounces</string>
    <string name="cups">cups</string>
    <string name="add_water_amt">Add Water Amount</string>
    <string name="add_water_instruct">Enter the amount of water consumed in ounces (8 ounces in a cup):</string>
    <string name="water_input_error">No water amount was entered.</string>
    <string name="sub_water_amt">Subtract Water Amount</string>
    <string name="sub_water_instruct">Enter the amount of water to subtract (amount wrongly entered):</string>

    <string name="actvity_tracking_dialog_title_start">START Activity Tracking</string>
    <string name="activity_tracking_dialog_message_start">Do you want the app to start tracking activity?\n\n
        Note: It may initially take a minute or two for your device to detect walking activity.\n\n
        Activity Tracking can also be managed by navigating to the Settings Tab.</string>
    <string name="actvity_tracking_dialog_title_stop">STOP Activity Tracking</string>
    <string name="activity_tracking_dialog_message_stop">Do you want the app to stop tracking walking activity?\n\n
        Activity Tracking can also be managed by navigating to the Settings Tab.</string>

    <string name="logout_dialog_title">Log Out</string>
    <string name="logout_dialog_message">Are you sure you want to log out? The app will close and you must sign in again later.</string>
</resources>
