<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_baseline_event_note_24px"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_snacks"
        android:icon="@drawable/ic_baseline_kitchen_24px"
        android:title="@string/title_healthy_snacks" />

    <item
        android:id="@+id/navigation_water_calc"
        android:icon="@drawable/ic_baseline_local_drink_24px"
        android:title="@string/title_water_calc" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_settings_20px"
        android:title="@string/title_settings" />

</menu>
