<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:padding="5dp"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:textSize="20sp"
                android:text="@string/water_goal_desc"
                android:padding="2dp"
                android:gravity="center_horizontal"
                android:textColor="@color/colorPrimaryDark"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/water_goal_desc2"
                android:padding="2dp"
                android:gravity="center_horizontal"
                />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="20dp"
                    >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/water_input_label"
                            android:padding="2dp"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            />

                        <EditText
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/water_input_hint"
                            android:id="@+id/weightInput"
                            />
                </LinearLayout>

                <Button
                    android:id="@+id/calculateBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/water_calculate_btn_label" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginTop="30dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/water_result_btn_label"
                        android:padding="2dp"
                        android:gravity="end"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        />

                    <TextView
                        android:id="@+id/waterCalcResult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text ="0"
                        android:textSize="20sp"
                        />

                </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </LinearLayout>
</ScrollView>