<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="5dp"
        android:orientation="vertical"
        >
            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                >

                  <!-- <TextView
                        android:id="@+id/historyScreenTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="History"
                         />-->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sitting_chart_label"
                    android:layout_margin="2dp"
                    />
                <!-- Add a Horizontal Bar Chart using MPAndroidChart library -->
                <com.github.mikephil.charting.charts.HorizontalBarChart
                    android:id="@+id/sitting_chart"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginBottom="8dp"
                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/walking_chart_label"
                    android:layout_margin="2dp"
                    />
                <!-- Add a Horizontal Bar Chart using MPAndroidChart library -->
                <com.github.mikephil.charting.charts.HorizontalBarChart
                    android:id="@+id/walking_chart"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginBottom="8dp"
                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/water_chart_label"
                    android:layout_margin="2dp"
                    />
                <!-- Add a Horizontal Bar Chart using MPAndroidChart library -->
                <com.github.mikephil.charting.charts.HorizontalBarChart
                    android:id="@+id/water_chart"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginBottom="8dp"
                    />


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="50dp" />

            </LinearLayout>
</ScrollView>
